--- a/layouts/partials/site_footer.html
+++ b/layouts/partials/site_footer.html
@@ -18,8 +18,8 @@
    {{/* Display copyright license. */}}
    {{ partial "site_footer_license" . }}
 
-   Made with <a href="https://github.com/ee-jackson/academic-kickstart" target="_blank" rel="noopener"><i class="fas fa-code-branch"></i></a>, and the
-    <a href="https://sourcethemes.com/academic/" target="_blank" rel="noopener">Academic theme</a> for
+   Made with <a href="https://github.com/ee-jackson/academic-kickstart" target="_blank" rel="noopener"><i class="fas fa-code-branch"></i></a>, the <a href="https://cran.r-project.org/" target="_blank" rel="noopener"><i class="fab fa-r-project"></i> </a><a href="https://github.com/rstudio/blogdown" target="_blank" rel="noopener">blogdown</a> package and the
+    <a href="https://themes.gohugo.io/academic/" target="_blank" rel="noopener">Academic theme</a> for
     <a href="https://gohugo.io" target="_blank" rel="noopener">Hugo</a>.
 
     {{ if not (in (slice "docs" "updates") .Type) }}
