--- a/layouts/partials/site_footer.html
+++ b/layouts/partials/site_footer.html
@@ -18,7 +18,7 @@
 
    {{/* Display copyright license. */}}
    {{ partial "site_footer_license" . }}
-    <a href="https://github.com/ee-jackson/eleanor-jackson.com" target="_blank" rel="noopener"><i class="fas fa-code-branch"></i></a>
+    <a href="https://github.com/ee-jackson/eleanor-jackson.com" target="_blank" rel="noopener"><i class="fas fa-code"></i></a>
     {{ if not (in (slice "docs" "updates") .Type) }}
     <span class="float-right" aria-hidden="true">
       <a href="#" class="back-to-top">
